# nixpkgs-fmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bors.toml  ci.sh  concan_in_attr.bad.nix  concan_in_attr.good.nix  default.nix  deploy.sh  flake.lock.nix  flake.nix  index.html  shell.nix  update-cargo-nix.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  formatting-issue.md
.github/workflows/: push.yml
docs/: howto_rules.md  releasing.md
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/fmt/: crash-0bdada2399fbe428ba729b8a87268e6670e5c07b  crash-33dad1919de59d6e9ab676817db5db4642bcf212  crash-a37db01a12a3c74202ac13360069e732af701c7e
fuzz/fuzz_targets/: fmt.rs
nix/: nixpkgs.nix  sources.json
pkg/: nixpkgs_fmt_wasm.d.ts  nixpkgs_fmt_wasm.js  nixpkgs_fmt_wasm_bg.d.ts  nixpkgs_fmt_wasm_bg.wasm  nixpkgs_fmt_wasm_bg.wasm.d.ts  package.json
samples/001/: out.nix
samples/002/: out.nix
samples/003/: out.nix
samples/simple/: out.nix
src/: dsl.rs  engine.rs  lib.rs  main.rs  pattern.rs  rules.rs  tree_utils.rs
src/engine/: fixes.rs  fmt_model.rs  indentation.rs  spacing.rs
test_data/: attr_fn.bad.nix  attr_fn.good.nix  binop_wrap_before.bad.nix  binop_wrap_before.good.nix  comment_in_inherit.bad.nix  comment_indent.bad.nix  comment_indent.good.nix  comment_inherit.bad.nix  comment_inherit.good.nix  concat_in_attr.bad.nix  concat_in_attr.good.nix  cond.bad.nix  cond.good.nix  curried_fn.bad.nix  curried_fn.good.nix  curried_fn_no_indent.good.nix  existing_blank_lines.bad.nix  existing_blank_lines.good.nix  fn_args_multiline.bad.nix  fn_args_multiline.good.nix  fn_args_multiple.bad.nix  fn_args_multiple.good.nix  fn_args_singleline.bad.nix  fn_args_singleline.good.nix  function_call.bad.nix  function_call.good.nix  if_then_else_indent.bad.nix  if_then_else_indent.good.nix  indent_assert_body.bad.nix  indent_assert_body.good.nix  indent_fn_body.bad.nix  indent_fn_body.good.nix  indent_inside_interpolation.bad.nix  indent_inside_interpolation.good.nix  indent_lambda_top_level.bad.nix  indent_lambda_top_level.good.nix  indent_let.bad.nix  indent_let.good.nix  indent_or_default.bad.nix  indent_or_default.good.nix  (+100 more)
test_data/nixpkgs_repository/: doc_shellnix.bad.nix  flakenix.bad.nix  flakenix.good.nix  lib_attrset.bad.nix  lib_attrset.good.nix  lib_cli.bad.nix  lib_cli.good.nix  lib_customisation.bad.nix  lib_customisation.good.nix  lib_deprecated.bad.nix  lib_deprecated.good.nix  lib_generators.bad.nix  lib_generators.good.nix  lib_modules.bad.nix  lib_modules.good.nix  lib_strings.bad.nix  lib_strings.good.nix  lib_tests_modules_alias_priority_override.bad.nix  lib_tests_modules_alias_priority_override.good.nix  maintainers_maintainer_list.bad.nix  maintainers_maintainer_list.good.nix  maintainers_scripts_update.bad.nix  maintainers_scripts_update.good.nix  nixos_lib_build_vms.bad.nix  nixos_lib_build_vms.good.nix  nixos_lib_testing_python.bad.nix  nixos_lib_testing_python.good.nix  nixos_modules_config_console.bad.nix  nixos_modules_config_console.good.nix  nixpkgs_idempotent.bad.nix  nixpkgs_idempotent.good.nix
test_data/syntax_errors/: incomplete_set.bad.nix  issue-93.bad.nix  issue-93.good.nix
tests/: integration_tests.rs
wasm/: Cargo.toml  build.sh  index.html
wasm/src/: lib.rs
