[package]
name = "nixpkgs-fmt"
version = "0.5.0"
authors = [
  "Aleksey Kladov <aleksey.kladov@gmail.com>",
  "zimbatm <zimbatm@zimbatm.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Nix code formatter for nixpkgs"
repository = "https://github.com/nix-community/nixpkgs-fmt"

[workspace]
members = [ "./wasm" ]

[dependencies]
rnix = "0.7.0"

# Dependencies that are used in the binary only
# Ideally, the feature should be enabled only for binary,
# but Cargo can't express that nicely yet.
crossbeam-channel = "0.3"
ignore = "0.4.10"
clap = "2.33.0"

# Enable serialization support for rnix syntax trees.
serde_json = "1.0"

[dependencies.rowan]
version = "0.6.2"
features = [ "serde1" ]

[dev-dependencies]
unindent = "0.1.3"

