[package]
name = "nixpkgs-fmt-wasm"
version = "0.1.0"
authors = [
  "Aleksey Kladov <aleksey.kladov@gmail.com>",
  "zimbatm <zimbatm@zimbatm.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "WASM bindings to the nix code formatter for nixpkgs"
repository = "https://github.com/nix-community/nixpkgs-fmt"

[lib]
crate-type = ["cdylib"]

[dependencies]
nixpkgs-fmt = { "path" = "../." }
wasm-bindgen = "0.2"
wee_alloc = "0.4.4"
console_error_panic_hook = "0.1.6"
